Updated theme styles

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "component-library",
+  "name": "one",
   "version": "0.1.0",
   "description": "Library of re-usable components for Endpoint projects",
   "private": true,
