--- a/package.json
+++ b/package.json
@@ -4,14 +4,12 @@
   "description": "Library of re-usable components for Endpoint projects",
   "private": true,
   "dependencies": {
-    "@emotion/core": "^10.0.16",
-    "@mdx-js/react": "^1.3.2",
+    "@styled-system/theme-get": "^5.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
     "styled-components": "^4.3.2",
-    "styled-system": "^5.1.1",
-    "theme-ui": "^0.2.36"
+    "styled-system": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
