--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Library of re-usable components for Endpoint projects",
   "private": true,
   "dependencies": {
+    "@styled-system/theme-get": "^5.1.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
