--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "eject": "react-scripts eject",
     "guide": "styleguidist server",
     "guide:build": "styleguidist build",
-    "rollup": "rollup -c",
+    "rollup": "rm -rf dist && rollup -c",
     "publish": "yarn rollup && npm publish"
   },
   "eslintConfig": {
