--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@system-one/react",
-  "version": "0.1.10",
+  "version": "0.1.14",
   "description": "Library of re-usable React components based on styled-system",
   "author": "Binh Nguyen <binh@endpointclosing.com>",
+  "browser": "dist/index.js",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "files": [
