--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "styled-components": "^4.3.2",
+    "styled-components": "5.0.0-beta.8",
     "styled-system": "^5.1.1"
   },
   "scripts": {
