--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eject": "react-scripts eject",
     "guide": "styleguidist server",
     "guide:build": "styleguidist build",
+    "sb": "start-storybook -p 4000",
     "rollup": "rm -rf dist && rollup -c",
     "publish": "yarn rollup && npm publish"
   },
@@ -49,6 +50,14 @@
     "@babel/core": "^7.6.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-docs": "^5.3.0-alpha.0",
+    "@storybook/addon-knobs": "^5.2.1",
+    "@storybook/addon-notes": "^5.2.1",
+    "@storybook/addon-options": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react": "^5.2.1",
+    "babel-loader": "^8.0.6",
     "react-styleguidist": "^9.1.16",
     "rollup": "^1.21.2",
     "rollup-plugin-babel": "^4.3.3",
